--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clear": "^0.1.0",
     "commander": "^9.2.0",
     "figlet": "^1.5.2",
+    "pdfkit": "^0.13.0",
     "prompts": "^2.4.2",
     "suncalc": "^1.9.0"
   },
@@ -27,6 +28,7 @@
     "@types/commander": "^2.12.2",
     "@types/figlet": "^1.5.4",
     "@types/node": "^17.0.25",
+    "@types/pdfkit": "^0.12.4",
     "@types/prompts": "^2.0.14",
     "@types/suncalc": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
