--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^5.0.1",
     "clear": "^0.1.0",
     "commander": "^9.2.0",
+    "conf": "^10.1.2",
     "figlet": "^1.5.2",
     "pdfkit": "^0.13.0",
     "prompts": "^2.4.2",
